Add qoute and add empty style css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ברוכים הבאים לאתר הציטוטים שלנו</title>
+    <link rel="stylesheet" href="style_1.css">
 </head>
 <body>
     <main>
@@ -11,6 +12,17 @@
             <div>
                 <h1>ברוכים הבאים לאתר הציטוטים שלנו</h1>
                 <p>השראה יומית לעסקים מצליחים</p>
+            </div>
+        </section>
+          <section>
+            <div>
+                <h2>ציטוטים מעוררי השראה</h2>
+                <div>
+                    <div>
+                        <p>"הדרך היחידה לעשות עבודה נהדרת היא לאהוב את מה שאתה עושה."</p>
+                        <p>— סטיב ג'ובס</p>
+                    </div>
+                </div>
             </div>
         </section>
 
